# Flux-middleware

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
app/: main.py  utils.py
app/api/v1/: api.py  health.py  subnet.py  task.py  twitter.py
app/core/: config.py  logger.py
app/crud/: base.py  project.py  task.py
app/db/: base.py
app/models/: project.py  task.py
app/schemas/: enums.py  flux.py  subnet.py  task.py  twitter.py  upload.py
app/services/: flux.py  subnet.py  task.py  twitter.py
migrations/: env.py
migrations/versions/: 9d9c561d3f78_create_project_table_and_add_project_id_.py  de1e7f62338f_create_task_table.py  e9bbdec80ff0_rename_task_name_to_twitter_name.py  f189e6c55f71_add_user_wallet_column_to_tasks_table.py
