[project]
name = "flux-middleware"
version = "0.1.0"
description = "Middleware for Hetu Flux system"
authors = [
    {name = "hanboli",email = "litterpigger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic[email]>=2.5.2",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.1",
    "pydantic-settings>=2.1.0",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
    pytest = "^7.4.3"
    black = "^23.11.0"
    flake8 = "^6.1.0"
    mypy = "^1.7.1"
    isort = "^5.12.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
